fixed layout issues, work and overall

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -2,18 +2,10 @@
 @import '../../styles/util/mixins';
 
 .container {
-	// position: relative;
 	display: flex;
+	position: relative;
 	flex-direction: column;
-	// align-items: center;
-	// width: 100%;
-	// height: 100vh;
-	// min-height: 100vh;
-	// max-width: variables.$desktop-width;
-	max-height: 100vh;
-	// max-width: 90%;
-	// margin: 0 auto;
-	// background-color: variables.$color-bgGray;
+	// max-height: 100vh;
 	overflow: hidden;
 	user-select: none;
 
@@ -33,7 +25,7 @@
 		pointer-events: none;
 		position: absolute;
 		bottom: -40px;
-		right: -30px;
+		right: -56px;
 		z-index: 1;
 
 		img {
@@ -57,7 +49,6 @@
 
 	.wrapper {
 		width: 100%;
-		// height: 100%;
 		height: calc((745px / 790px) * 100%);
 
 		background-color: variables.$color-bgGray;
