--- a/styles/pages/work.module.scss
+++ b/styles/pages/work.module.scss
@@ -9,109 +9,105 @@ $infoBox_height: 578px;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	max-height: $page_height;
+	// max-height: $page_height;
 	background-color: variables.$color-homeGray;
 
-	.workContent {
+	.top {
 		display: flex;
-		flex-direction: column;
-		width: 100%;
+		align-items: baseline;
+		justify-content: space-between;
+		margin: 25px 31px 10px 42px;
 
-		.top {
+		.subheader {
 			display: flex;
-			align-items: baseline;
-			justify-content: space-between;
-			margin: 25px 31px 10px 42px;
+			align-items: center;
+			height: 100%;
 
-			.subheader {
-				display: flex;
-				align-items: center;
-				height: 100%;
-
-				h1 {
-					@include fluid-type(
-						variables.$MQ-large-laptop,
-						variables.$MQ-large-desktop,
-						16px,
-						22px
-					);
-					text-align: center;
-					font-weight: 400;
-					font-family: variables.$font-family-amatic;
-					color: variables.$color-pink;
-					margin: 0;
-				}
-			}
-
-			.tabLogo {
-				display: flex;
-				flex-direction: column;
-				width: calc((97px / 100px) * 100%);
-				max-width: 100px;
-
-				img {
-					max-width: 97px;
-					margin-left: auto;
-				}
-
-				.lines {
-					width: 100%;
-					max-width: 100px;
-					border-top: 1px solid variables.$color-pink;
-					margin-top: 4px;
-				}
+			h1 {
+				@include fluid-type(
+					variables.$MQ-large-laptop,
+					variables.$MQ-large-desktop,
+					16px,
+					22px
+				);
+				text-align: center;
+				font-weight: 400;
+				font-family: variables.$font-family-amatic;
+				color: variables.$color-pink;
+				margin: 0;
 			}
 		}
 
-		.mainContainer {
-			position: relative;
+		.tabLogo {
 			display: flex;
-			align-self: flex-end;
-			width: calc((1265px / 1280px) * 100%);
-			height: $infoBox_height;
-			background-color: variables.$color-textGrey;
-			padding: 0 0 4px 13px;
-			height: $infoBox_height;
+			flex-direction: column;
+			width: calc((97px / 100px) * 100%);
+			max-width: 100px;
 
-			.infoBorder {
-				pointer-events: none;
-				position: absolute;
+			img {
+				max-width: 97px;
+				margin-left: auto;
+			}
+
+			.lines {
 				width: 100%;
-				height: calc(100% - 4px);
-				border-left: 2px solid rgba($color: #000000, $alpha: 0.2);
-				border-bottom: 2px solid rgba($color: #000000, $alpha: 0.2);
-			}
-
-			.projectContainer {
-				display: flex;
-				flex-flow: column wrap;
-				width: 98%;
-				height: 94%;
-				overflow: auto;
-				scroll-behavior: smooth;
-				-ms-overflow-style: none; /* IE and Edge */
-				scrollbar-width: none;
-				padding: 10px 20px 10px 30px;
-
-				&::-webkit-scrollbar {
-					display: none;
-				}
-
-				.projects {
-					display: flex;
-					justify-content: center;
-					column-gap: 30px;
-					row-gap: 20px;
-					flex-flow: row wrap;
-					margin-top: 20px;
-				}
+				max-width: 100px;
+				border-top: 1px solid variables.$color-pink;
+				margin-top: 4px;
 			}
 		}
+	}
 
-		.bottom {
+	.mainContainer {
+		position: relative;
+		display: flex;
+		align-self: flex-end;
+		width: calc((1265px / 1280px) * 100%);
+		height: 77vh;
+		background-color: variables.$color-textGrey;
+		padding-top: 30px;
+		padding-bottom: 20px;
+
+		.infoBorder {
+			pointer-events: none;
+			position: absolute;
+			top: 0;
+			left: 13px;
+			width: 100%;
+			// height: calc(100% - 4px);
+			height: 74vh;
+			border-left: 2px solid rgba($color: #000000, $alpha: 0.2);
+			border-bottom: 2px solid rgba($color: #000000, $alpha: 0.2);
+		}
+
+		.projectContainer {
 			display: flex;
-			margin-top: 10px;
-			margin-left: 180px;
+			flex-flow: column wrap;
+			width: 98%;
+			height: 97%;
+			overflow: auto;
+			scroll-behavior: smooth;
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none;
+			padding-left: 30px;
+
+			&::-webkit-scrollbar {
+				display: none;
+			}
+
+			.projects {
+				display: flex;
+				justify-content: center;
+				column-gap: 30px;
+				row-gap: 20px;
+				flex-flow: row wrap;
+			}
 		}
+	}
+
+	.bottom {
+		display: flex;
+		margin-top: 10px;
+		margin-left: 180px;
 	}
 }
